<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="user" type="com.implizstudio.android.app.wk.data.model.UserResponse.User" />
        <variable name="viewModel" type="com.implizstudio.android.app.wk.ui.about.AboutViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.about.AboutActivity">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:onProgressBar="@{viewModel.onProgressBar()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iv_icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_secondary"
            android:layout_marginTop="@dimen/margin_secondary"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_icon_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_primary"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/tv_user_exp"
            app:layout_constraintEnd_toStartOf="@+id/tv_user_exp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_user_exp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_user_exp"
            style="@style/TextBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_secondary"
            app:displayExp="@{user.exp}"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_back"
            tools:text="@string/exp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_user_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="75dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:displayPhotoUser="@{user.photo}"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_primary"
            android:textStyle="bold"
            app:displayFirstName="@{user.firstName}"
            app:displayLastName="@{user.lastName}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cv_user_photo"
            app:layout_constraintStart_toStartOf="@+id/cv_user_photo"
            app:layout_constraintTop_toBottomOf="@+id/cv_user_photo"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/fajar_agung_pramana" />

        <TextView
            android:id="@+id/tv_user_email"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOpacityText"
            android:text="@{user.email}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/ex_email" />

        <TextView
            android:id="@+id/tv_user_status"
            style="@style/TextBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_secondary"
            android:text="@{user.status}"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_user_email"
            app:layout_constraintStart_toStartOf="@+id/tv_user_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_email"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/user_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
